[tool.poetry]
name = "Music bot"
version = "1.0.0"
description = "A music bot"
authors = ["KortaPo"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.8.0"
disnake = "^2.2.1"
youtube-search-python = "^1.5.1"
youtube_dl = "^2021.6.6"
humanize = "^3.12.0"
loguru = "^0.5.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
